# Djando-App

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: db.sqlite3  log.txt  quieries.sql  shopapp-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py  create_author.py  create_category.py  create_tag.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_tags.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/database/: db.sqlite3
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  avatar_update_form.html  base.html  login.html  (+4 more)
mysite/mysite/: settings.py  urls.py  views.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_receipt_alter_order_created_at_and_more.py  0004_product_preview.py  0005_productimage.py  0006_alter_product_description_alter_product_name.py
(+27 files in other folders)
